fix SM icons shrinking on small screens

--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -23,6 +23,7 @@
 
     @include breakpoint(xs) {
       grid-template-columns: repeat(2, 1fr);
+      column-gap: 3rem;
     }
 
     .brand {
